--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,104 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+		Helvetica Neue, sans-serif;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+html,
+body,
+div,
+span,
+object,
+iframe,
+img,
+strong,
+b,
+u,
+i,
+table,
+tbody,
+tfoot,
+thead,
+td,
+th,
+tr form,
+label,
+legend,
+header,
+footer,
+article,
+section,
+aside {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+	background: transparent;
 }
-
+input:focus,
+select:focus,
+textarea:focus {
+	outline: none;
+}
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+table,
+td,
+th,
+tr {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+html,
+body {
+	width: 100%;
+	height: 100%;
+}
+input,
+select,
+textarea,
+button {
+	font-family: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-weight: 400;
+	box-sizing: border-box;
+	color: #000;
+}
+a,
+button,
+input[type='button'] {
+	cursor: pointer;
+}
+button {
+	border: none;
+	box-shadow: none;
+	background: transparent;
+}
+a {
+	text-decoration: none;
+	color: inherit;
+	outline: none;
+}
+*:hover,
+*:focus {
+	outline: none;
+}
+ul,
+li {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+* {
+	outline: none;
+	-webkit-font-smoothing: antialiased;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	margin: 0;
+	font-size: inherit;
 }
