--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import 'scss/variables.scss';
+@import 'scss/mixin.scss';
+
 html,
 body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
@@ -101,4 +107,11 @@ h6,
 p {
 	margin: 0;
 	font-size: inherit;
+}
+
+body {
+	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
+	line-height: 24px;
+	color: $black-color-dark;
 }
