--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -113,5 +113,5 @@ body {
 	font-size: 16px;
 	font-family: 'Roboto', sans-serif;
 	line-height: 24px;
-	color: $black-color-dark;
+	color: $black-color;
 }
