--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -96,6 +96,7 @@ p {
 body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+  font-weight: 400;
   line-height: 24px;
   color: $black-color;
 }
