--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -62,6 +62,7 @@ button {
   border: none;
   box-shadow: none;
   background: transparent;
+  outline: none;
 }
 a {
   text-decoration: none;
@@ -96,6 +97,7 @@ p {
 body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+  font-weight: 400;
   line-height: 24px;
   color: $black-color;
 }
