Implemented login api and UI

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,7 +59,7 @@ input[type='button'] {
   cursor: pointer;
 }
 button {
-  border: none;
+  border-color: transparent;
   box-shadow: none;
   background: transparent;
   outline: none;
