--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,8 +6,8 @@
 
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 html,
 body,
@@ -100,4 +100,8 @@ body {
   font-weight: 400;
   line-height: 24px;
   color: $black-color;
+}
+
+.ace-tm .ace_print-margin {
+  display: none;
 }
