If error, apply red border

--- a/styles/scss/popup.module.scss
+++ b/styles/scss/popup.module.scss
@@ -1,4 +1,8 @@
 .popup {
   overflow-y: scroll; /* has to be scroll, not auto */
   -webkit-overflow-scrolling: touch;
+
+  input[aria-invalid='true'] {
+    border-color: red;
+  }
 }
