--- a/styles/scss/ide.module.scss
+++ b/styles/scss/ide.module.scss
@@ -5,3 +5,56 @@
   color: #fff;
   min-height: calc(100vh - 160px);
 }
+
+.ide_burger {
+  width: 52px;
+  height: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+
+  span {
+    position: relative;
+    display: block;
+    height: 1.5px;
+    width: 15px;
+    background: $gray-color-75;
+    transition: $transition;
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: $gray-color-75;
+      left: 0;
+      transition: $transition;
+    }
+
+    &::before {
+      top: -5px;
+    }
+
+    &::after {
+      bottom: -5px;
+    }
+  }
+}
+
+.ide_burger_active {
+  span {
+    background: transparent;
+
+    &::before {
+      transform: translateY(5px) rotate(45deg);
+      background: #3a3b42;
+    }
+
+    &::after {
+      transform: translateY(-5px) rotate(-45deg);
+      background: #3a3b42;
+    }
+  }
+}
