--- a/styles/scss/ide.module.scss
+++ b/styles/scss/ide.module.scss
@@ -1,4 +1,5 @@
 @import 'variables.scss';
+@import 'mixin.scss';
 
 .ace_editor {
   background: $black-color-middle;
@@ -12,7 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 15;
 
   span {
     position: relative;
@@ -56,5 +57,11 @@
       transform: translateY(-5px) rotate(-45deg);
       background: #3a3b42;
     }
+  }
+}
+
+.tab_content {
+  @include minWidthMedia(992px) {
+    height: calc(100% - 48px);
   }
 }
