--- a/styles/scss/ide.module.scss
+++ b/styles/scss/ide.module.scss
@@ -7,39 +7,45 @@
   min-height: calc(100vh - 160px);
 }
 
-.ide_burger {
-  width: 52px;
-  height: inherit;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 15;
+.ide {
+  @include minWidthMedia(992px) {
+    max-height: calc(100vh - 160px);
+  }
 
-  span {
-    position: relative;
-    display: block;
-    height: 1.5px;
-    width: 15px;
-    background: $gray-color-75;
-    transition: $transition;
+  &_burger {
+    width: 52px;
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 15;
 
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
+    span {
+      position: relative;
+      display: block;
+      height: 1.5px;
+      width: 15px;
       background: $gray-color-75;
-      left: 0;
       transition: $transition;
-    }
 
-    &::before {
-      top: -5px;
-    }
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: $gray-color-75;
+        left: 0;
+        transition: $transition;
+      }
 
-    &::after {
-      bottom: -5px;
+      &::before {
+        top: -5px;
+      }
+
+      &::after {
+        bottom: -5px;
+      }
     }
   }
 }
