--- a/styles/scss/ide.module.scss
+++ b/styles/scss/ide.module.scss
@@ -1,17 +1,35 @@
 @import 'variables.scss';
 @import 'mixin.scss';
 
-.ace_editor {
-  background: $black-color-middle;
-  color: #fff;
-  min-height: calc(100vh - 160px);
+.console_btn {
+  padding: 18px;
+  width: 100%;
+  background: transparent;
+  position: relative;
+
+  &[aria-expanded='true'] {
+    &::after {
+      transform: rotate(135deg);
+    }
+  }
+
+  &:after {
+    display: inline-block;
+    content: '';
+    height: 10px;
+    width: 10px;
+    margin-right: 12px;
+    border-bottom: 2px solid #3a3b42;
+    border-left: 2px solid #3a3b42;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    position: absolute;
+    right: 12px;
+    top: 18px;
+  }
 }
 
 .ide {
-  @include minWidthMedia(992px) {
-    max-height: calc(100vh - 160px);
-  }
-
   &_burger {
     width: 52px;
     height: inherit;
@@ -68,6 +86,6 @@
 
 .tab_content {
   @include minWidthMedia(992px) {
-    height: calc(100% - 48px);
+    height: calc(100vh - 208px);
   }
 }
