--- a/styles/scss/ide.module.scss
+++ b/styles/scss/ide.module.scss
@@ -1,45 +1,69 @@
 @import 'variables.scss';
 @import 'mixin.scss';
 
-.ace_editor {
-  background: $black-color-middle;
-  color: #fff;
-  min-height: calc(100vh - 160px);
+.console_btn {
+  padding: 18px;
+  width: 100%;
+  background: transparent;
+  position: relative;
+
+  &[aria-expanded='true'] {
+    &::after {
+      transform: rotate(135deg);
+    }
+  }
+
+  &:after {
+    display: inline-block;
+    content: '';
+    height: 10px;
+    width: 10px;
+    margin-right: 12px;
+    border-bottom: 2px solid #3a3b42;
+    border-left: 2px solid #3a3b42;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    position: absolute;
+    right: 12px;
+    top: 18px;
+  }
 }
 
-.ide_burger {
-  width: 52px;
-  height: inherit;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 15;
+.ide {
+  &_burger {
+    width: 52px;
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 15;
 
-  span {
-    position: relative;
-    display: block;
-    height: 1.5px;
-    width: 15px;
-    background: $gray-color-75;
-    transition: $transition;
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
+    span {
+      position: relative;
+      display: block;
+      height: 1.5px;
+      width: 15px;
       background: $gray-color-75;
-      left: 0;
       transition: $transition;
-    }
 
-    &::before {
-      top: -5px;
-    }
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: $gray-color-75;
+        left: 0;
+        transition: $transition;
+      }
 
-    &::after {
-      bottom: -5px;
+      &::before {
+        top: -5px;
+      }
+
+      &::after {
+        bottom: -5px;
+      }
     }
   }
 }
@@ -62,6 +86,6 @@
 
 .tab_content {
   @include minWidthMedia(992px) {
-    height: calc(100% - 48px);
+    height: calc(100vh - 208px);
   }
 }
